Introduce kinesis sink on function (#1904)
* Introduce kinesis sink on function

add pulsarSinkE2E test

* remove kinesis test and dep

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -38,6 +38,7 @@
     <module>aerospike</module>
     <module>kafka</module>
     <module>rabbitmq</module>
+    <module>kinesis</module>
   </modules>
 
 </project>
