Remove pulsar-common dependency from pulsar-io-core module and cleanup pulsar-common dependency references (#2020)
*Motivation*

With pulsar-common shading in pulsar-client, conflicts observed when using pulsar-client with connectors. Because pulsar-client shades its dependencies,
while pulsar-io implementations pull in pulsar-common which depends on non-shaded dependencies.

*Changes*

- Move KeyValue class to pulsar-io-core, since all pulsar-io is using it.
- Remove pulsar-common from all pulsar-io implementation modules
- Cleanup all direct usage of pulsar-common when pulsar-client-original is in the place.

--- a/pulsar-io/kinesis/pom.xml
+++ b/pulsar-io/kinesis/pom.xml
@@ -39,9 +39,13 @@
     </dependency>
 
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>pulsar-common</artifactId>
-      <version>${project.version}</version>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
     </dependency>
 
     <dependency>
