add flatbuffer option to serialize kinesis-message in KinesisSink (#2108)
* add flatbuffer option to serialize kinesis-message

* add flatbuffer license

* fix license

--- a/pulsar-io/kinesis/pom.xml
+++ b/pulsar-io/kinesis/pom.xml
@@ -81,6 +81,12 @@
       <version>0.12.8</version>
     </dependency>
 	<!-- /kinesis dependencies -->
+	
+    <dependency>
+      <groupId>com.google.flatbuffers</groupId>
+      <artifactId>flatbuffers-java</artifactId>
+      <version>1.9.0</version>
+    </dependency>
 
   </dependencies>
 
