Moved Record interface as part of functions api (#2184)
* Moved Record interface as part of functions api

* Added org.apache.pulsar.functions.api.* to PowerMock ignore

--- a/pulsar-io/kinesis/pom.xml
+++ b/pulsar-io/kinesis/pom.xml
@@ -39,6 +39,13 @@
     </dependency>
 
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>pulsar-functions-instance</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
     </dependency>
@@ -81,7 +88,7 @@
       <version>0.12.8</version>
     </dependency>
 	<!-- /kinesis dependencies -->
-	
+
     <dependency>
       <groupId>com.google.flatbuffers</groupId>
       <artifactId>flatbuffers-java</artifactId>
