Initial SQL documentation and DataGeneratorSource (#2479)
* Initial SQL documentation and DataGeneratorSource

* adding license header

* adding to sidebar

* improving documentation

* adding to sql getting started

* small fix

* adding data generator to connector bin distribution

* improve sql worker cli

* adding data generator to io pom

* modifying launch args

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -38,6 +38,7 @@
     <module>kafka</module>
     <module>rabbitmq</module>
     <module>kinesis</module>
+    <module>data-genenator</module>
   </modules>
 
 </project>
