Added HDFS Sink (#2409)
* Added HDFS Sink

* Fixed issues identified during PR review

* Fixed comment

* Added HDFS Container to externalServices

* Ignoring HdfsSink test for now

* Removed HDFS Container to externalServices

* Fixed ASL licensing

* Fixed compile errors

* Added HDFS to SinkType Enum

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -39,6 +39,7 @@
     <module>kafka</module>
     <module>rabbitmq</module>
     <module>kinesis</module>
+    <module>hdfs</module>
     <module>jdbc</module>
     <module>data-genenator</module>
   </modules>
