--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -42,6 +42,7 @@
     <module>hdfs</module>
     <module>jdbc</module>
     <module>data-genenator</module>
+    <module>elastic-search</module>
   </modules>
 
 </project>
