[io] jdbc connector uses Schema.AUTO (#2538)
* [schema] enable Schema.AUTO if functions or connectors are using GenericRecord

* auto schema in jdbc sink

* [io] jdbc connector uses Schema.AUTO

--- a/pulsar-io/jdbc/src/main/resources/META-INF/services/pulsar-io.yaml
+++ b/pulsar-io/jdbc/src/main/resources/META-INF/services/pulsar-io.yaml
@@ -19,4 +19,4 @@
 
 name: jdbc
 description: Jdbc sink
-sinkClass: org.apache.pulsar.io.jdbc.JdbcAvroSchemaSink
+sinkClass: org.apache.pulsar.io.jdbc.JdbcAutoSchemaSink
