[tests] improve connector related integration tests (#2587)
*Motivation*

with more and more connector are added, it becomes expensive to start all external services at the begin.

*Changes*

- refactor the connector testing framework to start external service before methods
- fix kafka, cassandra and mysql connectors

--- a/pulsar-io/elastic-search/src/main/resources/META-INF/services/pulsar-io.yaml
+++ b/pulsar-io/elastic-search/src/main/resources/META-INF/services/pulsar-io.yaml
@@ -17,6 +17,6 @@
 # under the License.
 #
 
-name: Elastic Search
+name: elastic_search
 description: Writes data into Elastic Search
-sinkClass: org.apache.pulsar.io.elasticsearch.ElasticSearchStringSink
+sinkClass: org.apache.pulsar.io.elasticsearch.ElasticSearchSink
