Issue #2757: Kafka source connector should just transfer bytes (#2761)
*Motivation*

connector is mostly used for transferring bytes from kafka to pulsar.
since we haven't mapped schema between kafka and pulsar, we should just
transfer bytes for now.

*Changes*

Add a bytes source and make bytes source as a default setting.
Keep string source there for BC consideration.

--- a/pulsar-io/kafka/src/main/resources/META-INF/services/pulsar-io.yaml
+++ b/pulsar-io/kafka/src/main/resources/META-INF/services/pulsar-io.yaml
@@ -19,5 +19,5 @@
 
 name: kafka
 description: Kafka source and sink connector
-sourceClass: org.apache.pulsar.io.kafka.KafkaStringSource
+sourceClass: org.apache.pulsar.io.kafka.KafkaBytesSource
 sinkClass: org.apache.pulsar.io.kafka.KafkaBytesSink
