--- a/pulsar-io/kafka-connect-adaptor/src/main/resources/debezium-mysql-source-config.yaml
+++ b/pulsar-io/kafka-connect-adaptor/src/main/resources/debezium-mysql-source-config.yaml
@@ -20,6 +20,8 @@
 tenant: "test"
 namespace: "test-namespace"
 name: "debezium-kafka-source"
+topicName: "kafka-connect-topic"
+archive: "connectors/pulsar-io-kafka-connect-adaptor-2.3.0-SNAPSHOT.nar"
 
 ##autoAck: true
 parallelism: 1
