support mysql binlog sync to pulsar by canal (#2998)
### Motivation

support alibaba canal
https://github.com/alibaba/canal/wiki

### Modifications

Integrated canal client

### Result

support binlog sync to pulsar
use python pulsar-client to consume

```
import pulsar

client = pulsar.Client('pulsar://localhost:6650')
consumer = client.subscribe('my-topic',
                            subscription_name='my-sub')

while True:
    msg = consumer.receive()
    print("Received message: '%s'" % msg.data())
    consumer.acknowledge(msg)

client.close()
```

```
output:
Received message: '[{"data":null,"database":"testdb","es":1542446501000,"id":44,"isDdl":true,"mysqlType":null,"old":null,"sql":"CREATE TABLE `users320` (   `id` int(11) NOT NULL AUTO_INCREMENT,   `name` varchar(50) DEFAULT NULL,   `extra` varchar(50) DEFAULT NULL,   PRIMARY KEY (`id`),   KEY `ix_users_name` (`name`) ) ENGINE=InnoDB DEFAULT CHARSET=utf8","sqlType":null,"table":"users320","ts":1542446501114,"type":"CREATE"}]'
```

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -45,6 +45,7 @@
     <module>elastic-search</module>
     <module>kafka-connect-adaptor</module>
     <module>debezium</module>
+    <module>canal</module>
   </modules>
 
 </project>
