--- a/pulsar-io/docs/pom.xml
+++ b/pulsar-io/docs/pom.xml
@@ -19,34 +19,39 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
   <parent>
     <groupId>org.apache.pulsar</groupId>
-    <artifactId>pulsar</artifactId>
+    <artifactId>pulsar-io</artifactId>
     <version>2.3.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pulsar-io</artifactId>
-  <name>Pulsar IO :: Parent</name>
+  <artifactId>pulsar-io-docs</artifactId>
+  <name>Pulsar IO :: Docs</name>
 
-  <modules>
-    <module>core</module>
-    <module>docs</module>
-    <module>twitter</module>
-    <module>cassandra</module>
-    <module>aerospike</module>
-    <module>kafka</module>
-    <module>rabbitmq</module>
-    <module>kinesis</module>
-    <module>hdfs</module>
-    <module>jdbc</module>
-    <module>data-genenator</module>
-    <module>elastic-search</module>
-    <module>kafka-connect-adaptor</module>
-    <module>debezium</module>
-    <module>canal</module>
-  </modules>
+  <dependencies>
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>pulsar-io-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.beust</groupId>
+      <artifactId>jcommander</artifactId>
+    </dependency>
+
+    <!-- include connectors -->
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>pulsar-io-kafka</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 
 </project>
