--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -40,12 +40,13 @@
     <module>kafka</module>
     <module>rabbitmq</module>
     <module>kinesis</module>
-    <module>hdfs</module>
+    <module>hdfs3</module>
     <module>jdbc</module>
     <module>data-genenator</module>
     <module>elastic-search</module>
     <module>kafka-connect-adaptor</module>
     <module>debezium</module>
+    <module>hdfs2</module>
     <module>canal</module>
     <module>netty</module>
   </modules>
