Added Pulsar IO connector for local files (#2869)
### Motivation

Added a Pulsar IO connector for consuming files from the local filesystem

### Modifications

Added a new module to the pulsar-io module that includes the Pulsar file connector and its associated classes & tests

### Result

After your change, users will be able to consume files from the local filesystem, and have the contents directly published to a Pulsar topic.

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -48,6 +48,7 @@
     <module>debezium</module>
     <module>hdfs2</module>
     <module>canal</module>
+    <module>file</module>
     <module>netty</module>
   </modules>
 
