--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -42,7 +42,7 @@
     <module>kinesis</module>
     <module>hdfs3</module>
     <module>jdbc</module>
-    <module>data-genenator</module>
+    <module>data-generator</module>
     <module>elastic-search</module>
     <module>kafka-connect-adaptor</module>
     <module>debezium</module>
