Issue #3290 Pulsar IO connector for Hbase sink (#3368)
Supporting the ability to write data to HBase sink #3290

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -50,6 +50,7 @@
     <module>canal</module>
     <module>file</module>
     <module>netty</module>
+    <module>hbase</module>
   </modules>
 
 </project>
