[Issue 3275][pulsar-io]Support source and sink of flume (#3597)
* Support TLS authentication and authorization in standalone mode

* Compile success
To do: test channel, sink and source of flume

* Add conf file

* Add sink and source folder
Move file to folder
Add source
Compile success
To do -> test source

* test flume source paas

* Add config file and test case

* Add test and update pom.xml
To do add test of source and sink

* Add unit tests

* Add test case and test pass
To do test source

* Add license
Add test source of pulsar

* Handle if blockingQueue is null

* Move LOG to log

* Format code

* Add sinkClass in pulsar-io.yaml

* Add comment

* Default is false

* Modify pom file of flume

* Format pom.xml file

* Move pom version to 2.4.0-SNAPSHOT

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -52,6 +52,7 @@
     <module>netty</module>
     <module>hbase</module>
     <module>mongo</module>
+    <module>flume</module>
   </modules>
 
 </project>
