[pulsar-io] Add a Pulsar IO connector for Redis sink (#3700)
### Motivation

This PR provides a built-in Redis sink Connector, in order to cache messages in Redis [key-value] pairs. This will effectively make Redis a caching system, which other applications can access to get the latest value.

### Modifications

Add a new sub-module in the `pulsar-io` module.

### Verifying this change

This change can be verified as follows:

* deploy the redis sink connector with configuration file containing the following fields:

```
configs:
    redisHosts: "localhost:6379"
    redisPassword: "redis@123"
    redisDatabase: "1"
    clientMode: "Standalone"
    operationTimeout: "3000"
    batchSize: "100"
```
* start a redis instance with auth
* send messages with `NotNull` key/value in the topic declared when deploying the connector
* check in Redis if the message's key-value pairs have been stored in above database

### Documentation
```
# Submit a Redis Sink
$ bin/pulsar-admin sink create --tenant public --namespace default --name redis-test-sink --sink-type redis --sink-config-file examples/redis-sink.yaml --inputs test_redis
    
# List Sink
$ bin/pulsar-admin sink list --tenant public --namespace default
    
# Get Sink Info
$ bin/pulsar-admin sink get --tenant public --namespace default --name redis-test-sink
    
# Get Sink Status
$ bin/pulsar-admin sink status --tenant public --namespace default --name redis-test-sink
    
# Delete the Redis Sink
$ bin/pulsar-admin sink delete --tenant public --namespace default --name redis-test-sink
```

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -53,6 +53,7 @@
     <module>hbase</module>
     <module>mongo</module>
     <module>flume</module>
+    <module>redis</module>
   </modules>
 
 </project>
