Some minor improvement of RabbitMQ IO Source. (#3937)
### Motivation

This PR try to add some specific config for RabbitMQ IO Source to support setting `basicQos` and `ack`. 

### Modifications

* Add an abstract `RabbitMQAbstractConfig` and `RabbitMQSourceConfig` inherits from it.
* Add some unit tests.

--- a/pulsar-io/rabbitmq/pom.xml
+++ b/pulsar-io/rabbitmq/pom.xml
@@ -49,9 +49,21 @@
     </dependency>
 
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.rabbitmq</groupId>
       <artifactId>amqp-client</artifactId>
       <version>${rabbitmq-client.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.qpid</groupId>
+      <artifactId>qpid-broker</artifactId>
+      <version>6.1.6</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
