[Issue 3884] [pulsar-io] Add a Pulsar IO connector for Solr sink (#3885)
* Add a Pulsar IO connector for Solr sink.

* Remove empty lines and add a test scope in pom

* Add license header in pom

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -54,6 +54,7 @@
     <module>mongo</module>
     <module>flume</module>
     <module>redis</module>
+    <module>solr</module>
   </modules>
 
 </project>
