Add a Pulsar IO connector for RabbitMQ sink. (#3967)
### Motivation

Provides a builtin RabbitMQ Sink Connector, in order to persist pulsar messages to a RabbitMQ queue.

### Modifications

Add a RabbitMQ Sink and some unit tests.

### Verifying this change

This change can be verified as follows:

* deploy the RabbitMQ sink connector with configuration file containing the following fields:

```
configs:
    host: "localhost"
    port: "5672"
    virtualHost: "/"
    username: "quest"
    password: "quest"
    queueName: "test_queue"
    connectionName: "test_connection"
    exchangeName: "test_exchange"
    routingKey: "test_routing"
```
* deploy an RabbitMQ cluster and create the above elements
* send messages in the topic with specified schema declared when deploying the connector
* use `rabbitmqadmin` or `rabbitmqctl` to query messages in the specified queue

--- a/pulsar-io/rabbitmq/pom.xml
+++ b/pulsar-io/rabbitmq/pom.xml
@@ -37,6 +37,22 @@
       <artifactId>pulsar-io-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>pulsar-functions-instance</artifactId>
+      <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j-impl</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>pulsar-client-original</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
