Add helper method to for IO connectors to use function secrets (#4222)
* pulsar-io connectors use secrets

* remove unnecessary files

* fix pom

* add license headers

--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -33,6 +33,7 @@
 
   <modules>
     <module>core</module>
+    <module>common</module>
     <module>docs</module>
     <module>twitter</module>
     <module>cassandra</module>
