--- a/pulsar-io/pom.xml
+++ b/pulsar-io/pom.xml
@@ -24,7 +24,7 @@
   <packaging>pom</packaging>
   <parent>
     <groupId>org.apache.pulsar</groupId>
-    <artifactId>pulsar</artifactId>
+    <artifactId>pulsar-connectors</artifactId>
     <version>2.7.0-SNAPSHOT</version>
   </parent>
 
@@ -38,10 +38,6 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <modules>
-        <module>core</module>
-        <module>batch-discovery-triggerers</module>
-        <module>batch-data-generator</module>
-        <module>common</module>
         <module>docs</module>
         <module>aws</module>
         <module>twitter</module>
@@ -52,7 +48,6 @@
         <module>kinesis</module>
         <module>hdfs3</module>
         <module>jdbc</module>
-        <module>data-generator</module>
         <module>elastic-search</module>
         <module>kafka-connect-adaptor</module>
         <module>debezium</module>
@@ -69,19 +64,5 @@
         <module>dynamodb</module>
       </modules>
     </profile>
-
-    <profile>
-      <id>core-modules</id>
-      <modules>
-        <module>core</module>
-        <module>batch-discovery-triggerers</module>
-        <module>common</module>
-        <module>twitter</module>
-        <module>cassandra</module>
-        <module>data-generator</module>
-      </modules>
-    </profile>
-
   </profiles>
-
 </project>
